# SpaceGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
SpaceGame/: Application.cpp  Application.h  CMakeLists.txt  Common.h
SpaceGame/Components/: Terrain.cpp
SpaceGame/Engine/: Engine.cpp  Engine.h  Input.cpp  Input.h  Models.cpp  Models.h  Text.cpp  Text.h
SpaceGame/Engine/Rendering/: Renderer.cpp  Renderer.h  Shaders.cpp  Shaders.h
SpaceGame/res/models/: asteroids.blend  ship.blend  ship.blend1  ship.glb  station.blend  station.blend1  station.mtl
SpaceGame/res/shaders/: debug.frag  debug.vert  font.frag  font.vert
